--- a/css/styles.css
+++ b/css/styles.css
@@ -1,45 +1,77 @@
 @charset "utf-8";
 /* CSS Document */
 
-body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+body,
+td,
+th,
+p{
+  font: 10pt Arial, Helvetica, sans-serif;
 	color: #333;
 	line-height: 1.5;
 }
+
 body {
 	background-color: #fdfdfd;
 	margin: 0;
-	position:relative;
+	position: relative;
 }
-ul, li {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+
+ul,
+li {
+	font: 10pt Arial, Helvetica, sans-serif;
 	color: #333;
 }
+
 a {
 	color: orange;
 	text-decoration: none;
 }
-a:hover, a:focus {
+
+a:hover, 
+a:focus {
 	color: #3397db;
 	text-decoration: none;
 }
+
 a img{
 	border: none 0px #fff;
 }
-h1, h2, h3, h4, h5, h6 {
+
+h1, 
+h2, 
+h3, 
+h4, 
+h5, 
+h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+
+article, 
+aside, 
+canvas, 
+details, 
+figcaption, 
+figure, 
+footer, 
+header, 
+hgroup, 
+menu, 
+nav, 
+section {
 	display: block;
 }
-#maincontent {
+
+.main-content {
   background-color: #f3f3f3;
+  width: 100%;
   min-height: 100%;
 }
-#footer {
+
+#maincontent{
+  width: 100%;
+}
+.footer {
   background-color: #444;
   color: #aaa;
   font-size: 8pt;
@@ -48,23 +80,38 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   text-align: center;
   text-transform: uppercase;
 }
+
+.footer-restaurant{
+  width: 100%;
+}
+
 /* ====================== Navigation ====================== */
 nav {
-  width: 100%;
-  height: 80px;
+  width: 100%; 
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+  position: fixed;
+  display: block;
   background-color: #252831;
   text-align:center;
 }
+
 nav h1 {
   margin: auto;
 }
-nav h1 a {
+
+nav h1 a, 
+nav h1 a:hover,
+nav h1 a:focus {
   color: #fff;
   font-size: 14pt;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
 }
+
 #breadcrumb {
     padding: 10px 40px 16px;
     list-style: none;
@@ -72,6 +119,9 @@ nav h1 a {
     font-size: 17px;
     margin: 0;
     width: calc(50% - 80px);
+    margin-top: 25px; 
+    position: relative;
+    height: 20px;
 }
 
 /* Display list items side by side */
@@ -93,82 +143,127 @@ nav h1 a {
 }
 
 /* Add a color on mouse-over */
-#breadcrumb li a:hover {
+#breadcrumb li a:hover, 
+#breadcrumb li a:focus {
     color: #01447e;
     text-decoration: underline;
 }
+
 /* ====================== Map ====================== */
 #map {
   height: 400px;
   width: 100%;
   background-color: #ccc;
 }
+
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  width: 100%;
-  height: 50px;
+  width: 100%; 
+  height: auto;
   background-color: #3397DB;
   align-items: center;
+  padding-top: 7px;
 }
+
+.inner-filter-option{
+  width: 30%;
+  margin: 0 auto;
+}
+
 .filter-options h2 {
-  color: white;
-  font-size: 1rem;
-  font-weight: normal;
-  line-height: 1;
-  margin: 0 20px;
+  color: #fff;
+  font-weight: normal; 
+  margin: 0 10px;
+  text-align: center;
 }
+
+.filter-results-container{
+  margin-bottom: 0;
+}
+
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
-  font-family: Arial,sans-serif;
-  font-size: 11pt;
+  font: 11pt Arial, sans-serif;
   height: 35px;
-  letter-spacing: 0;
-  margin: 10px;
+  letter-spacing: 0; 
   padding: 0 10px;
-  width: 200px;
+  margin-left: 5px;
+  width: calc((100% - 1em)/2);
+  margin-bottom: 7px; 
+}
+
+.filter-options select:last-of-type{
+  margin-right: 0;
 }
 
 /* ====================== Restaurant Listing ====================== */
-#restaurants-list {
+.outer-rest-list{
+  margin-top: 15px;
+}
+
+.restaurant-list-div {
+  width: 80%;
+  margin: 0 auto;
+  min-height: 500px;
+}
+
+.restaurants-list-container{
+  max-width: 100%;
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  /* padding-bottom: 30px 15px 60px; */
   text-align: center;
+  content: "";
+  display: table;
+  clear: both;
 }
+
+ul {
+  list-style-type: none;
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
+  -webkit-margin-start: 0;
+  -webkit-margin-end: 0;
+  -webkit-padding-start: 0;
+}
+
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
-  margin: 15px;
+  font-family: Arial,sans-serif; 
   min-height: 380px;
-  padding: 0 30px 25px;
-  text-align: left;
-  width: 270px;
+  padding-bottom: 30px; 
+  float: left;
+  width: calc((100% - 12px)/3);
+  margin-bottom: 15px;
 }
+
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
+  min-height: 248px; 
 }
+
 #restaurants-list li h1 {
   color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 14pt;
+  font: 14pt Arial, sans-serif;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
   text-transform: uppercase;
 }
+
 #restaurants-list p {
   margin: 0;
   font-size: 11pt;
 }
+
 #restaurants-list li a {
   background-color: orange;
   border-bottom: 3px solid #eee;
@@ -189,6 +284,7 @@ nav h1 a {
   width: 100%;
   z-index: 1000;
 }
+
 .inside #map-container {
   background: blue none repeat scroll 0 0;
   height: 87%;
@@ -197,16 +293,21 @@ nav h1 a {
   top: 80px;
   width: 50%;
 }
+
 .inside #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
 }
+
 .inside #footer {
   bottom: 0;
-  position: absolute;
-  width: 50%;
+  position: relative;
+  width: 100%;
+  z-index: 1000;
+  background-color: #444;
 }
+
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
@@ -217,13 +318,16 @@ nav h1 a {
   text-transform: uppercase;
   line-height: 1.1;
 }
+
 #restaurant-img {
 	width: 90%;
 }
+
 #restaurant-address {
   font-size: 12pt;
   margin: 10px 0px;
 }
+
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
@@ -236,15 +340,18 @@ nav h1 a {
   text-transform: uppercase;
 	width: 90%;
 }
+
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
   width: 50%;
 }
+
 #reviews-container {
   padding: 30px 40px 80px;
 }
+
 #reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
@@ -252,13 +359,15 @@ nav h1 a {
   letter-spacing: -1px;
   padding-bottom: 1pt;
 }
+
 #reviews-list {
   margin: 0;
   padding: 0;
 }
+
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
@@ -267,9 +376,11 @@ nav h1 a {
   position: relative;
   width: 85%;
 }
+
 #reviews-list li p {
   margin: 0 0 10px;
 }
+
 #restaurant-hours td {
   color: #666;
 }
