--- a/css/mobilescreen.css
+++ b/css/mobilescreen.css
@@ -1,10 +1,31 @@
 @charset "utf-8";
 /* CSS Document */
+@media only screen and (max-width: 1039px){
+    #restaurants-list li{
+        width: calc((100% - 12px)/2);
+    }
+}
+
+@media only screen and (max-width: 1073px) {
+    #restaurants-list p {
+        margin: 0;
+        font-size: 10pt;
+    }
+} 
+
 @media only screen and (max-width: 812px) {
     #restaurants-list li {
         width: calc((100% - 12px)/2);
     }
 } 
+
+@media only screen and (max-width: 698px){
+    #restaurants-list li {
+        width: calc((70% - 15px));
+        margin: 0 auto;
+        margin-left: 15.9%;
+    }
+}
 
 @media only screen and (max-width: 570px) {
     #restaurants-list ul {
@@ -69,16 +90,65 @@
     }
 
     #restaurant-container, #reviews-container {
-        border-bottom: 1px solid #d9d9d9;
-        border-top: 1px solid #fff;
-        padding: 140px 40px 30px;
+        border-bottom: 0px solid #d9d9d9;
+        border-top: 0px solid #fff;
+        padding: 10px 0px 0px;
         width: 100%;
     }
 
     .inner-filter-option {
         width: 60%;
     }
+    #restaurants-list .restaurant-img{
+        min-height: auto;
+    }
         
+    table #restaurant-hours{
+        width: 100%;
+        display: -webkit-flex; /* Safari */
+        -webkit-align-items: center; /* Safari 7.0+ */
+        display: flex;
+        align-items: center;
+        font-size: 16pt;
+    }
+
+    #restaurant-hours{
+        font-size: 16pt;
+    }
+
+    #restaurant-hours .days-of-week,
+    .reviews-user-name, 
+    .reviews-user-rating, 
+    .reviews-user-date, 
+    .reviews-user-comments{
+        font-size: 12pt;
+    }
+
+    .days-of-week{
+        padding-left: 10%;
+    }
+
+    .reviews-user-date {
+    font-style: italic; 
+    }
+
+    .reviews-user-name{
+        padding-top: 10px;
+    }
+
+    #reviews-list li{
+        width: 80%;
+        margin: 0 auto;
+        border: 0; 
+        border-bottom: 2px dotted #000;
+    }
+
+    #reviews-list li:last-of-type{
+        border-bottom: 0;
+    }
+    #restaurant-address{
+        margin: 10pt 10pt;
+    }
 } 
 
 @media screen and (max-width: 363px){
