--- a/css/styles.css
+++ b/css/styles.css
@@ -74,11 +74,17 @@ section {
 .footer {
   background-color: #444;
   color: #aaa;
-  font-size: 8pt;
+  font-size: 14pt;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
+}
+
+.footer-restaurant{
+  bottom: 0;
+  width: 50%;
+  z-index: 1000;
 }
 
 .footer-restaurant{
@@ -104,21 +110,27 @@ nav h1 {
 
 nav h1 a, 
 nav h1 a:hover,
-nav h1 a:focus {
-  color: #fff;
+nav h1 a:focus { 
+  text-align: center;
   font-size: 14pt;
   font-weight: 200;
   letter-spacing: 10px;
-  text-transform: uppercase;
+  text-transform: uppercase; 
+  color: orange;
+}
+
+a:focus{
+  text-decoration-line: underline;
+  color: orange;
 }
 
 #breadcrumb {
     padding: 10px 40px 16px;
     list-style: none;
-    background-color: #eee;
+    background-color: transparent;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+    width: calc(100% - 80px);
     margin-top: 25px; 
     position: relative;
     height: 20px;
@@ -138,7 +150,7 @@ nav h1 a:focus {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: orange;
     text-decoration: none;
 }
 
@@ -154,6 +166,24 @@ nav h1 a:focus {
   height: 400px;
   width: 100%;
   background-color: #ccc;
+}
+.map-offline-placeholder{
+  display: none;
+  height: 400px;
+  width: 100%; 
+}
+
+.emphasis {
+  text-align: center; 
+}
+
+h2.emphasis {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+p.emphasis {
+  font-style: italic;
 }
 
 /* ====================== Restaurant Filtering ====================== */
@@ -246,7 +276,7 @@ ul {
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px; 
+  /* min-height: 248px;  */
 }
 
 #restaurants-list li h1 {
@@ -257,11 +287,12 @@ ul {
   line-height: 1.3;
   margin: 20px 0 10px;
   text-transform: uppercase;
+  min-height: 48px;
 }
 
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  font-size: 12pt;
 }
 
 #restaurants-list li a {
@@ -286,11 +317,11 @@ ul {
 }
 
 .inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
+  background: #fff none repeat scroll 0 0;
+  height: 100%;
   position: fixed;
   right: 0;
-  top: 80px;
+  top: 30px;
   width: 50%;
 }
 
@@ -303,8 +334,8 @@ ul {
 .inside #footer {
   bottom: 0;
   position: relative;
-  width: 100%;
-  z-index: 1000;
+  /* width: 100%; */
+  z-index: 1000 !important;
   background-color: #444;
 }
 
@@ -317,39 +348,42 @@ ul {
   margin: 15px 0 30px;
   text-transform: uppercase;
   line-height: 1.1;
+  text-align: center;
 }
 
 #restaurant-img {
-	width: 90%;
+  width: 100%;
+  margin: 0 auto;
 }
 
 #restaurant-address {
   font-size: 12pt;
   margin: 10px 0px;
+  text-align: center;
 }
 
 #restaurant-cuisine {
-  background-color: #333;
-  color: #ddd;
-  font-size: 12pt;
-  font-weight: 300;
+  color: #000;
+  font-weight: bold;
+  font-size: 14pt;
   letter-spacing: 10px;
   margin: 0 0 20px;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+  width: 100%;
+  margin: 0 auto;
 }
 
 #restaurant-container, #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
+  border-bottom: 0px solid #d9d9d9;
+  border-top: 0px solid #fff;
+  padding: 10px 0px 0px;
   width: 50%;
 }
 
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 30px 10px 80px;
 }
 
 #reviews-container h2 {
@@ -358,6 +392,7 @@ ul {
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
+  text-align: center;
 }
 
 #reviews-list {
@@ -372,7 +407,6 @@ ul {
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
   position: relative;
   width: 85%;
 }
@@ -381,6 +415,27 @@ ul {
   margin: 0 0 10px;
 }
 
+#restaurant-hours{
+  width: 100%;
+  align-items: center; 
+}
+
+#restaurant-hours .days-of-week,
+.reviews-user-name, 
+.reviews-user-rating{
+  font-weight: bold;
+}
+
+.reviews-user-rating{
+  color: orange;
+}
+
+.reviews-user-date {
+  font-style: italic; 
+}
+
+
 #restaurant-hours td {
   color: #666;
+  width: 50%; 
 }
