--- a/css/mobilescreen.css
+++ b/css/mobilescreen.css
@@ -24,6 +24,7 @@
         width: calc((70% - 15px));
         margin: 0 auto;
         margin-left: 15.9%;
+        margin-bottom: 10px;
     }
 }
 
