--- a/css/mobilescreen.css
+++ b/css/mobilescreen.css
@@ -67,6 +67,13 @@
     }
 }
 @media only screen and (max-width: 768px) {
+    #breadcrumb{
+        width: 95%;
+    }
+    #restaurant-maincontent{
+        margin-top: 0;
+    }
+
     /* .toggle-to-right{
         margin: 0 auto;
         width: 100%;
@@ -79,8 +86,8 @@
     }
 
     nav {
-        height: 100px; 
-        display: flex;
+        display: block;
+        height: auto;
         justify-content: center;
     }
  
@@ -120,6 +127,7 @@
         border-top: 0px solid #fff;
         padding: 10px 0px 0px;
         width: 100%;
+        margin-top: 4em;
     }
     .inner-filter-option {
         width: 60%;
@@ -130,9 +138,10 @@
         
     table #restaurant-hours{
         width: 100%;
-        display: -webkit-flex; /* Safari */
+        /* display: -webkit-flex; */
         -webkit-align-items: center; /* Safari 7.0+ */
-        display: flex;
+        /* display: flex; */
+        display: block;
         align-items: center;
         font-size: 16pt;
     }
@@ -216,10 +225,11 @@
 
     #breadcrumb li { 
         font-size: 16pt;
+        display: inline;
     }
 
     #breadcrumb{
-        margin-top: 40pt;
+        margin-top: 0;
     }
 
     h1, h2, h3, h4, h5, h6 { 
@@ -252,6 +262,9 @@
 @media screen and (max-width: 363px){
     nav {
         width: 100%;
+    }
+    .nav-restaurant{
+        height: 136px;
     }
     
     .reviews-user-name, 
