add favourite icon with functionality and performance changes

--- a/css/mobilescreen.css
+++ b/css/mobilescreen.css
@@ -93,6 +93,9 @@
     #reviews-container p{
         padding-left: 10%;
     }
+    #reviews-container span{
+        padding-left: 10%;
+    }
     .send-review-button{
         margin-left: 10%;
     }
