--- a/css/styles.css
+++ b/css/styles.css
@@ -301,7 +301,7 @@ ul {
   line-height: 1.3;
   margin: 20px 0 10px;
   text-transform: uppercase;
-  min-height: 48px;
+  /* min-height: 48px; */
 }
 
 #restaurants-list p {
@@ -559,8 +559,6 @@ img[data-src] {
   visibility: hidden;
 }
 
-/* .toggle-to-right{ 
-  width: 30px;
-  height: 30px;
-  float: right;
-} */
+.favourite_yes{
+  color: #ff0000 !important;
+}
